base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: stefanprodan/podinfo
        imagePullPolicy: Always
        
        ports:
          - name: http
            containerPort: 9898

        livenessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP

        readinessProbe:
          httpGet:
            path: /readyz
            port: http
            scheme: HTTP

        resources:
          limits:
            cpu: 200m
            memory: 300M
          requests:
            cpu: 200m
            memory: 300M
