base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: app-ingress
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name:  app-service
            port: 
              name: http
